2009-05-15  Piotr Eljasiak  <epiotr@use.pl>

	Added GNOME Commander project.

	* projects.gnome.org/index.html:

2009-05-15  Alejandro Valdes Jimenez  <avaldes@utalca.cl>

	* projects.gnome.org/gevice/index.html:

2009-05-14  Alejandro Valdes Jimenez  <avaldes@utalca.cl>

	Add the gevice website.

	* projects.gnome.org/gevice/Makefile.am:
	* projects.gnome.org/gevice/gevice.css:
	* projects.gnome.org/gevice/images/Makefile.am:
	* projects.gnome.org/gevice/images/gevice-banner.png:
	* projects.gnome.org/gevice/images/gevice-banner.xcf:
	* projects.gnome.org/gevice/images/screenshot-main.png:
	* projects.gnome.org/gevice/images/screenshot-main2.png:
	* projects.gnome.org/gevice/images/thumb-screenshot.png:
	* projects.gnome.org/gevice/images/thumb-screenshot2.png:
	* projects.gnome.org/gevice/index.html:


2009-04-05  Jonathan Matthew  <jonathan@d14n.org>

	* configure.in: output rhythmbox/images/Makefile

2009-03-30  Johannes Schmid  <jhs@gnome.org>

	* projects.gnome.org/anjuta/Makefile.am:
	* projects.gnome.org/anjuta/development.html:
	* projects.gnome.org/anjuta/downloads.html:
	* projects.gnome.org/anjuta/features.html:
	* projects.gnome.org/anjuta/index.html:
	Move files from *.html to *.shtml so that the server
	recognizes the server-side-includes

2009-03-27  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/friends/thank-you.wml: mention the FoG banners.
	* www.gnome.org/friends/banners/*: add banners.

2009-03-26  Johannes Schmid  <jhs@gnome.org>

	* projects.gnome.org/anjuta/Makefile.am:
	* projects.gnome.org/anjuta/css/Makefile.am:
	* projects.gnome.org/anjuta/css/docs.css:
	* projects.gnome.org/anjuta/css/layout.css:
	* projects.gnome.org/anjuta/css/style.css:
	* projects.gnome.org/anjuta/development.html:
	* projects.gnome.org/anjuta/downloads.html:
	* projects.gnome.org/anjuta/features.html:
	* projects.gnome.org/anjuta/index.html:
	* projects.gnome.org/anjuta/layout.shtml:
	Moved anjuta website from svn:extenals here
