@@ -29,13 +29,13 @@
         
         <a name="download"></a>
         <h3>Download</h3>      
-        <p>Gevice development takes place in the <a href="http://git.gnome.org">GNOME GIT Server</a>.
+        <p>Gevice development takes place in the <a href="http://git.gnome.org/">GNOME GIT Server</a>.
           You can check out the latest code using the <tt>git</tt> program like this:</p>
         <code>$ git clone git://git.gnome.org/gevice</code>
 
-	<p>The last release is <a href="http://deb.utalca.cl/public/release/gevice-0.5.1.tar.gz">0.5.1</a>. The md5sum 
-is: c10ece3592786d8026a5947b114b703d</p>
-        
+	<p>The latest releases can always be found at the <a href="http://ftp.gnome.org/pub/GNOME/sources/gevice/">GNOME ftp site.</a></p>
+        <p>The latest release is <a href="http://ftp.gnome.org/pub/GNOME/sources/gevice/0.5/gevice-0.5.1.tar.gz">0.5.1</a></p>
+
         <a name="screenshots"></a>
         <h3>Screenshots</h3>
         <p><a href="images/screenshot-main.png"><img src="images/thumb-screenshot.png"></a></p>
@@ -43,7 +43,7 @@ is: c10ece3592786d8026a5947b114b703d</p>
         
         <a name="about"></a>
         <h3>About</h3>
-        <p>Current maintainer and Original author: Alejandro Vald&eacute;s Jimenez<tt>&lt;avaldes at utalca.cl&gt;</tt></p>
+        <p>Current maintainer and Original author: Alejandro Vald&eacute;s Jimenez<tt>&lt;avaldes at gnome.org&gt;</tt></p>
         
         <p>gevice is released under the <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License (GPL)</a>.</p>
     </div>
@@ -55,6 +55,11 @@ is: c10ece3592786d8026a5947b114b703d</p>
         <li><a href="#download">Download</a></li>
         <li><a href="#screenshots">Screenshots</a></li>
         <li><a href="#about">About</a></li>
+        </ul>
+
+        <p class="section">Feedback</p>
+        <ul>
+        <li>Bugs should be reported to the <a href="http://bugzilla.gnome.org/">GNOME Bug Tracking System.</a></li>
         </ul>
     </div>
     
