@@ -1,3 +1,7 @@
+2009-05-16  Alejandro Valdes Jimenez  <avaldes@gnome.org>
+
+	* projects.gnome.org/gevice/index.html:
+
 2009-05-15  Piotr Eljasiak  <epiotr@use.pl>
 
 	Added GNOME Commander project.
